--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,27 +1,4 @@
-# ========================
-# 📁 General OS/System Files
-# ========================
-.DS_Store
-Thumbs.db
-ehthumbs.db
-Icon?
-Desktop.ini
-.Trashes
-
-# ========================
-# 🔧 Node.js / React (Frontend)
-# ========================
-client/node_modules/
-client/dist/
-client/build/
-client/.env
-client/.env.local
-client/.env.*.local
-client/coverage/
-client/.cache/
-client/.vite/
-
-# Yarn / npm / pnpm Logs
+# Logs
 logs
 *.log
 npm-debug.log*
@@ -30,62 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# ========================
-# 🐍 Python (Backend)
-# ========================
-server/__pycache__/
-server/*.py[cod]
-server/*.so
-server/*.pyd
-server/*.egg-info/
-server/venv/
-server/env/
-server/ENV/
-server/.env
-server/.vscode/
-*.sqlite3
-pip-log.txt
-pip-delete-this-directory.txt
+node_modules
+dist
+dist-ssr
+*.local
 
-# Jupyter (if ever used)
-.ipynb_checkpoints/
-
-# ========================
-# 🚀 Model Files (optional ignore)
-# Uncomment below to ignore trained model weights (if large/private)
-# model_weights.h5
-# *.h5
-# *.tflite
-# *.onnx
-# *.pt
-# *.pkl
-# *.ckpt
-# *.weights
-
-# ========================
-# 🐳 Docker (if used)
-# ========================
-*.pid
-*.pid.lock
-docker-compose.override.yml
-
-# ========================
-# 🖋️ Editor/IDE Files
-# ========================
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea/
+.idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# ========================
-# 📦 Misc
-# ========================
-*.bak
-*.tmp
-*.log
-*.log.*
-
